refactor and separate question of part
